--- a/package.json
+++ b/package.json
@@ -19,7 +19,10 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "expo": "^25.0.0",
+    "mobx": "^4.1.0",
+    "mobx-react": "^5.0.0",
     "react": "16.2.0",
     "react-native": "0.52.0",
     "react-navigation": "^1.4.0"
